Add a new question to the Strings section

--- a/Aulas/Aula2.ipynb
+++ b/Aulas/Aula2.ipynb
@@ -306,6 +306,9 @@
     "<ol>\n",
     "    <li>Escreva um programa que retorna o número de dígitos de um inteiro.</li>\n",
     "    <li>Escreva um programa que recebe o nome completo e retorna ele em minúsculo</li>\n",
+    "    <li>Escreva um programa que recebe uma quantia e um o número do dia, e preencha a frase abaixo, usando a função format:\n",
+    "    <p>\"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ (xxx) (Valor expresso), à vista, no dia (xxx).\"</p>\n",
+    "    </li>\n",
     "<ol>"
    ]
   },
@@ -350,36 +353,12 @@
     }
    ],
    "source": [
-    "# If... Else\n",
+    "# If... Else (Se... senão...)\n",
     "idade = 5\n",
     "if idade >= 18:\n",
     "    print(\"É maior de idade!\")\n",
     "else:\n",
     "    print(\"Não é maior de idade!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Não pode votar e não é maior de idade!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# If..Elif..Else\n",
-    "idade = 5\n",
-    "if idade >= 16 and idade < 18:\n",
-    "    print(\"Pode votar e não é maior de idade!\")\n",
-    "elif idade < 16:\n",
-    "    print(\"Não pode votar e não é maior de idade!\")\n",
-    "else:\n",
-    "    print(\"Pode votar e é maior de idade!\")"
    ]
   },
   {
@@ -403,6 +382,30 @@
     "    print(\"É maior de idade!\")\n",
     "else:\n",
     "    print(\"Não é maior de idade!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não pode votar e não é maior de idade!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If..Elif..Else (Se... e se... senão...)\n",
+    "idade = 5\n",
+    "if idade >= 16 and idade < 18:\n",
+    "    print(\"Pode votar e não é maior de idade!\")\n",
+    "elif idade < 16:\n",
+    "    print(\"Não pode votar e não é maior de idade!\")\n",
+    "else:\n",
+    "    print(\"Pode votar e é maior de idade!\")"
    ]
   },
   {
