Update aula1 and review answers of aula2

--- a/Aulas/Aula1.ipynb
+++ b/Aulas/Aula1.ipynb
@@ -416,6 +416,7 @@
     }
    ],
    "source": [
+    "# Operador lógico E\n",
     "True and False"
    ]
   },
@@ -436,6 +437,7 @@
     }
    ],
    "source": [
+    "# Operador lógico OU\n",
     "True or False"
    ]
   },
@@ -453,6 +455,7 @@
     }
    ],
    "source": [
+    "# Operador lógico NÃO\n",
     "not(True)"
    ]
   },
