--- a/Aulas/Aula2_answers.ipynb
+++ b/Aulas/Aula2_answers.ipynb
@@ -73,17 +73,32 @@
    "metadata": {},
    "source": [
     "<p>Escreva um programa que recebe uma quantia e um o número do dia, e preencha a frase abaixo, usando a função format:\n",
-    "    <p>\"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ (xxx) (Valor expresso), à vista, no dia (xxx).\"</p>\n",
+    "    <p>\"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ ({}) (Valor expresso), à vista, no dia ({}).\"</p>\n",
     "</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite a quantia: 3\n",
+      "Digite o dia: 19\n",
+      "Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ (3) (Valor expresso), à vista, no dia (19).\n"
+     ]
+    }
+   ],
    "source": [
-    "frase = \"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ ({}) (Valor expresso), à vista, no dia ({}).\"\n"
+    "frase = \"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ ({}) (Valor expresso), à vista, no dia ({}).\"\n",
+    "\n",
+    "quantia = input('Digite a quantia: ')\n",
+    "dia = input('Digite o dia: ')\n",
+    "\n",
+    "print(frase.format(quantia, dia))"
    ]
   },
   {
