--- a/Aulas/Aula3.ipynb
+++ b/Aulas/Aula3.ipynb
@@ -8,17 +8,174 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leite\n",
+      "Frutas\n",
+      "Carne\n"
+     ]
+    }
+   ],
    "source": [
-    "<h2>Funções</h2>"
+    "# Criando uma lista e imprimindo cada um dos valores\n",
+    "lista_mercado = [\"Leite\", \"Frutas\", \"Carne\"]\n",
+    "for item in lista_mercado:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imprimindo na tela os números pares da lista de números\n",
+    "lista = [1,2,3,4,5,6,7,8,9,10]\n",
+    "for numero in lista:\n",
+    "    if numero % 2 == 0:\n",
+    "        print (numero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Achei!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pesquisando em listas\n",
+    "profissoes = ['advogado', 'dentista', 'engenheiro']\n",
+    "\n",
+    "# Loop através da lista\n",
+    "for profissao in profissoes:\n",
+    "    if profissao == 'advogado':\n",
+    "        print(\"Achei!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n",
+      " \n",
+      "é\n",
+      " \n",
+      "u\n",
+      "m\n",
+      "a\n",
+      " \n",
+      "l\n",
+      "i\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "g\n",
+      "e\n",
+      "m\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "ç\n",
+      "ã\n",
+      "o\n",
+      " \n",
+      "d\n",
+      "i\n",
+      "v\n",
+      "e\n",
+      "r\n",
+      "t\n",
+      "i\n",
+      "d\n",
+      "a\n",
+      "!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Strings também são sequências\n",
+    "for letra in 'Python é uma linguagem de programação divertida!':\n",
+    "    print (letra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando o loop while para imprimir os valores de 0 a 9\n",
+    "counter = 0\n",
+    "while counter < 5:\n",
+    "    print(counter)\n",
+    "    counter = counter + 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Arquivos de texto</h2>"
+    "<h2>Exercícios</h2>\n",
+    "<ol>\n",
+    "    <li>Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda.</li>\n",
+    "<ol>"
    ]
   },
   {
