--- a/Aulas/Aula3.ipynb
+++ b/Aulas/Aula3.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -92,54 +92,13 @@
       "h\n",
       "o\n",
       "n\n",
-      " \n",
-      "é\n",
-      " \n",
-      "u\n",
-      "m\n",
-      "a\n",
-      " \n",
-      "l\n",
-      "i\n",
-      "n\n",
-      "g\n",
-      "u\n",
-      "a\n",
-      "g\n",
-      "e\n",
-      "m\n",
-      " \n",
-      "d\n",
-      "e\n",
-      " \n",
-      "p\n",
-      "r\n",
-      "o\n",
-      "g\n",
-      "r\n",
-      "a\n",
-      "m\n",
-      "a\n",
-      "ç\n",
-      "ã\n",
-      "o\n",
-      " \n",
-      "d\n",
-      "i\n",
-      "v\n",
-      "e\n",
-      "r\n",
-      "t\n",
-      "i\n",
-      "d\n",
-      "a\n",
       "!\n"
      ]
     }
    ],
    "source": [
     "# Strings também são sequências\n",
-    "for letra in 'Python é uma linguagem de programação divertida!':\n",
+    "for letra in 'Python!':\n",
     "    print (letra)"
    ]
   },
@@ -177,13 +136,6 @@
     "    <li>Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda.</li>\n",
     "<ol>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
