--- a/Aulas/Aula2_answers.ipynb
+++ b/Aulas/Aula2_answers.ipynb
@@ -312,26 +312,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digite nome do vendedor: v1\n",
-      "Digite nacionalidade do vendedor: brasileiro\n",
-      "Digite estado civil do vendedor: casado\n",
-      "Digite CPF do vendedor: 123\n",
-      "Digite nome do comprador: c1\n",
-      "Digite nacionalidade do comprador: japones\n",
-      "Digite estado civil do comprador: solteiro\n",
-      "Digite CPF do comprador: 1234\n",
+      "Digite nome do vendedor: Maria Jose\n",
+      "Digite nacionalidade do vendedor: Brasileira\n",
+      "Digite estado civil do vendedor: solteira\n",
+      "Digite CPF do vendedor: 12345\n",
+      "Digite nome do comprador: Jose Carlos\n",
+      "Digite nacionalidade do comprador: Brasileiro\n",
+      "Digite estado civil do comprador: Casado\n",
+      "Digite CPF do comprador: 123456\n",
       "\n",
       "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
-      "    VENDEDOR: (v1), (brasileiro), (casado), C.P.F. nº (123);\n",
+      "    VENDEDOR: (MARIA JOSE), (BRASILEIRA), (solteira), C.P.F. nº (12345);\n",
       "\n",
-      "    COMPRADOR: (c1), (japones), (solteiro), C.P.F. nº (1234).\n",
+      "    COMPRADOR: (JOSE CARLOS), (BRASILEIRO), (Casado), C.P.F. nº (123456).\n",
       "\n",
       "    As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
       "\n"
@@ -348,12 +348,16 @@
     "    As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
     "'''\n",
     "nome_vendedor = input('Digite nome do vendedor: ')\n",
+    "nome_vendedor = nome_vendedor.upper()\n",
     "nacionalidade_vendedor = input('Digite nacionalidade do vendedor: ')\n",
+    "nacionalidade_vendedor = nacionalidade_vendedor.upper()\n",
     "estado_civil_vendedor = input('Digite estado civil do vendedor: ')\n",
     "cpf_vendedor = input('Digite CPF do vendedor: ')\n",
     "\n",
     "nome_comprador = input('Digite nome do comprador: ')\n",
+    "nome_comprador = nome_comprador.upper()\n",
     "nacionalidade_comprador = input('Digite nacionalidade do comprador: ')\n",
+    "nacionalidade_comprador = nacionalidade_comprador.upper()\n",
     "estado_civil_comprador = input('Digite estado civil do comprador: ')\n",
     "cpf_comprador = input('Digite CPF do comprador: ')\n",
     "\n",
@@ -377,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
