--- a/Aulas/6 - Funções.ipynb
+++ b/Aulas/6 - Funções.ipynb
@@ -13,6 +13,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Referências</h2>\n",
+    "\n",
+    "#### https://github.com/dsacademybr/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
