--- a/Aulas/7 - Arquivos.ipynb
+++ b/Aulas/7 - Arquivos.ipynb
@@ -22,6 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Referências</h2>\n",
+    "\n",
+    "#### https://github.com/dsacademybr/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
