--- a/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
+++ b/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
@@ -762,6 +762,15 @@
     "        dados do programa com as mensagens adequadas.</li>\n",
     "</ol>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Referências</h2>\n",
+    "\n",
+    "#### https://github.com/dsacademybr/"
+   ]
   }
  ],
  "metadata": {
@@ -780,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
