--- a/Aulas/3 - Condicionais.ipynb
+++ b/Aulas/3 - Condicionais.ipynb
@@ -194,6 +194,22 @@
     "    </li>\n",
     "</ol>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Referências</h2>\n",
+    "\n",
+    "#### https://github.com/dsacademybr/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
