Update lists and loops classes

--- a/Aulas/4 - Listas.ipynb
+++ b/Aulas/4 - Listas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +118,175 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regina\n",
+      "Oliveira\n",
+      "Tejo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Atribuindo cada valor da lista a uma variável.\n",
+    "nome_completo = 'Regina Oliveira Tejo'\n",
+    "lista_de_nomes = nome_completo.split()\n",
+    "\n",
+    "primeiro_nome = lista_de_nomes[0]\n",
+    "nome_do_meio = lista_de_nomes[1]\n",
+    "ultimo_nome = lista_de_nomes[2]\n",
+    "\n",
+    "# Imprimindo nomes\n",
+    "print(primeiro_nome)\n",
+    "print(nome_do_meio)\n",
+    "print(ultimo_nome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenando listas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apagando um item da lista\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Função len() retorna o comprimento da lista\n",
+    "len(lista_do_mercado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ovos'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Função max() retorna o valor máximo da lista\n",
+    "max(lista_do_mercado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'farinha'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Função min() retorna o valor mínimo da lista\n",
+    "min(lista_do_mercado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ovos', 'farinha', 'leite', 'maçãs', 'carne']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adicionando um item à lista\n",
+    "lista_do_mercado.append(\"carne\")\n",
+    "print(lista_do_mercado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_do_mercado.count(\"carne\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criando uma lista vazia\n",
+    "a = []\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,6 +311,22 @@
     "    </li>\n",
     "</ol>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Referências</h2>\n",
+    "\n",
+    "#### https://github.com/dsacademybr/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
