--- a/Aulas/5 - Estruturas de repetição.ipynb
+++ b/Aulas/5 - Estruturas de repetição.ipynb
@@ -104,6 +104,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[10, 15, 14]\n",
+      "[10.1, 8.7, 2.3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loops em lista de listas\n",
+    "listas = [[1,2,3], [10,15,14], [10.1,8.7,2.3]]\n",
+    "for valor in listas:\n",
+    "    print(valor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Renata\n",
+      "20\n",
+      "Teresa\n",
+      "25\n",
+      "João\n",
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loops aninhados\n",
+    "lista_nome_idade = [['Renata', 20], ['Teresa', 25], ['João', 37]]\n",
+    "for nome_idade in lista_nome_idade:\n",
+    "    for item in nome_idade:\n",
+    "        print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contando os itens de uma lista\n",
+    "lista = [5, 6, 10, 13, 17]\n",
+    "count = 0\n",
+    "for item in lista:\n",
+    "    count += 1\n",
+    "    \n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -136,6 +207,22 @@
     "    <li>Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda.</li>\n",
     "<ol>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Referências</h2>\n",
+    "\n",
+    "#### https://github.com/dsacademybr/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
