--- a/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
+++ b/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
@@ -769,8 +769,15 @@
    "source": [
     "<h2>Referências</h2>\n",
     "\n",
-    "#### https://github.com/dsacademybr/"
+    "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
