--- a/Aulas/4 - Listas.ipynb
+++ b/Aulas/4 - Listas.ipynb
@@ -137,6 +137,7 @@
     "nome_completo = 'Regina Oliveira Tejo'\n",
     "lista_de_nomes = nome_completo.split()\n",
     "\n",
+    "# Lembre-se: em Python o índice começa por 0!\n",
     "primeiro_nome = lista_de_nomes[0]\n",
     "nome_do_meio = lista_de_nomes[1]\n",
     "ultimo_nome = lista_de_nomes[2]\n",
@@ -149,20 +150,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rogério', 32, 1.8, 'Natal', 'Rua das Flores', 22]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Concatenando listas\n"
+    "# Concatenando listas\n",
+    "\n",
+    "dados_pessoais_cliente = ['Rogério', 32, 1.8]\n",
+    "endereco_cliente = ['Natal', 'Rua das Flores', 22]\n",
+    "\n",
+    "dados_cliente = dados_pessoais_cliente + endereco_cliente\n",
+    "print(dados_cliente)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Recife', 'Manaus']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Apagando um item da lista\n"
+    "# Removendo um item da lista através do índice\n",
+    "\n",
+    "cidades = ['Recife', 'Manaus', 'Salvador']\n",
+    "del cidades[2]\n",
+    "print(cidades)"
    ]
   },
   {
@@ -269,6 +296,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Recife', 'Manaus']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Removendo um item da lista através do conteúdo\n",
+    "\n",
+    "cidades = ['Recife', 'Manaus', 'Salvador']\n",
+    "cidades.remove('Salvador')\n",
+    "print(cidades)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-e559738b4c71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Removendo um item inexistente da lista\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcidades\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Recife'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Manaus'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Salvador'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcidades\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rio de Janeiro'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcidades\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "# Removendo um item inexistente da lista\n",
+    "\n",
+    "cidades = ['Recife', 'Manaus', 'Salvador']\n",
+    "cidades.remove('Rio de Janeiro')\n",
+    "print(cidades)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -290,26 +363,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Exercícios</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ol>\n",
-    "    <li>\n",
-    "        <p>Atribua a uma variável em seu programa um string entre aspas triplas contendo esse documento:</p>\n",
-    "        IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "### Exercícios\n",
     "\n",
-    "        VENDEDOR: (Nome do Vendedor), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx);\n",
-    "       \n",
-    "        COMPRADOR: (Nome do Comprador), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx).\n",
-    "       \n",
-    "        As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
-    "<p>Escreva um programa recebe o nome do vendedor, nacionalidade, estado civil e cpf; assim como todas essas informações do comprador. Os nomes e as nacionalidades (tanto do vendedor quanto do comprador) devem ser apresentadas em maiúsculo. Seu programa deve imprimir o documento referente à identificação das partes contrantes.</p>\n",
-    "    </li>\n",
-    "</ol>"
+    "Atribua a uma variável em seu programa um string entre aspas triplas contendo esse documento:\n",
+    "        \n",
+    "> IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "\n",
+    "> VENDEDOR: (Nome do Vendedor), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx);\n",
+    "\n",
+    "> COMPRADOR: (Nome do Comprador), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx).\n",
+    "\n",
+    "> As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
+    "        \n",
+    "Escreva um programa recebe o nome do vendedor, nacionalidade, estado civil e cpf; assim como todas essas mesmas informações (nome, nacionalidade, estado civil e cpf) do comprador. \n",
+    "\n",
+    "Inicialmente, o programa deve imprimir as informações recebidas em formato de lista, tanto para o vendedor quanto para o comprador. Os nomes e as nacionalidades (tanto do vendedor quanto do comprador) devem ser apresentadas em maiúsculo. \n",
+    "\n",
+    "Seu programa deve imprimir no console, o documento gerado, referente à identificação das partes contrantes.\n",
+    " \n",
+    " "
    ]
   },
   {
@@ -318,7 +390,7 @@
    "source": [
     "<h2>Referências</h2>\n",
     "\n",
-    "#### https://github.com/dsacademybr/"
+    "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
   },
   {
