--- a/Aulas/5 - Estruturas de repetição.ipynb
+++ b/Aulas/5 - Estruturas de repetição.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercícios</h2>\n",
+    "## Exercícios\n",
     "<ol>\n",
     "    <li>Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda.</li>\n",
     "<ol>"
@@ -214,7 +214,7 @@
    "source": [
     "<h2>Referências</h2>\n",
     "\n",
-    "#### https://github.com/dsacademybr/"
+    "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
   },
   {
