Update and changing to markdown

--- a/Aulas/4 - Listas (Respostas).ipynb
+++ b/Aulas/4 - Listas (Respostas).ipynb
@@ -4,14 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Respostas dos exercícios</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Listas</h2>"
+    "### Respostas dos exercícios\n",
+    "\n",
+    "## Listas"
    ]
   },
   {
