--- a/Aulas/5 - Estruturas de repetição.ipynb
+++ b/Aulas/5 - Estruturas de repetição.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Estruturas de repetição</h2>"
+    "## Estruturas de repetição"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iteração - For"
    ]
   },
   {
@@ -24,6 +31,7 @@
    ],
    "source": [
     "# Criando uma lista e imprimindo cada um dos valores\n",
+    "\n",
     "lista_mercado = [\"Leite\", \"Frutas\", \"Carne\"]\n",
     "for item in lista_mercado:\n",
     "    print(item)"
@@ -48,6 +56,7 @@
    ],
    "source": [
     "# Imprimindo na tela os números pares da lista de números\n",
+    "\n",
     "lista = [1,2,3,4,5,6,7,8,9,10]\n",
     "for numero in lista:\n",
     "    if numero % 2 == 0:\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +78,10 @@
    ],
    "source": [
     "# Pesquisando em listas\n",
+    "\n",
     "profissoes = ['advogado', 'dentista', 'engenheiro']\n",
     "\n",
-    "# Loop através da lista\n",
+    "# Iteração na lista\n",
     "for profissao in profissoes:\n",
     "    if profissao == 'advogado':\n",
     "        print(\"Achei!\")"
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +108,7 @@
    ],
    "source": [
     "# Strings também são sequências\n",
+    "\n",
     "for letra in 'Python!':\n",
     "    print (letra)"
    ]
@@ -119,6 +130,7 @@
    ],
    "source": [
     "# Loops em lista de listas\n",
+    "\n",
     "listas = [[1,2,3], [10,15,14], [10.1,8.7,2.3]]\n",
     "for valor in listas:\n",
     "    print(valor)"
@@ -144,6 +156,7 @@
    ],
    "source": [
     "# Loops aninhados\n",
+    "\n",
     "lista_nome_idade = [['Renata', 20], ['Teresa', 25], ['João', 37]]\n",
     "for nome_idade in lista_nome_idade:\n",
     "    for item in nome_idade:\n",
@@ -165,12 +178,20 @@
    ],
    "source": [
     "# Contando os itens de uma lista\n",
+    "\n",
     "lista = [5, 6, 10, 13, 17]\n",
     "count = 0\n",
     "for item in lista:\n",
     "    count += 1\n",
     "    \n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iteração - While"
    ]
   },
   {
@@ -192,6 +213,7 @@
    ],
    "source": [
     "# Usando o loop while para imprimir os valores de 0 a 9\n",
+    "\n",
     "counter = 0\n",
     "while counter < 5:\n",
     "    print(counter)\n",
@@ -203,9 +225,8 @@
    "metadata": {},
    "source": [
     "## Exercícios\n",
-    "<ol>\n",
-    "    <li>Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda.</li>\n",
-    "<ol>"
+    "\n",
+    "1. Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda."
    ]
   },
   {
@@ -214,7 +235,9 @@
    "source": [
     "<h2>Referências</h2>\n",
     "\n",
-    "#### https://github.com/dsacademybr/PythonFundamentos"
+    "#### https://github.com/dsacademybr/PythonFundamentos\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap03/Notebooks/DSA-Python-Cap03-02-For.ipynb\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap03/Notebooks/DSA-Python-Cap03-03-While.ipynb"
    ]
   },
   {
