--- a/Aulas/4 - Listas (Respostas).ipynb
+++ b/Aulas/4 - Listas (Respostas).ipynb
@@ -13,19 +13,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Atribua a uma variável em seu programa um string entre aspas triplas contendo esse documento:</p>\n",
-    "        IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "Atribua a uma variável em seu programa um string entre aspas triplas contendo esse documento:\n",
+    "        \n",
+    "> IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
     "\n",
-    "        VENDEDOR: (Nome do Vendedor), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx);\n",
-    "       \n",
-    "        COMPRADOR: (Nome do Comprador), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx).\n",
-    "       \n",
-    "        As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
-    "<p>Escreva um programa recebe o nome do vendedor, nacionalidade, estado civil e cpf; assim como todas essas informações do comprador. Seu programa deve imprimir o documento referente à identificação das partes contrantes.</p>\n",
-    "    <li>\n",
-    "        <p>Escreva um programa que conta o número de palavras que contém a letra ‘e’ em um string. Seu programa deve imprimir uma análise desse texto da seguinte forma:</p>\n",
-    "        <p>Seu texto contém 243 palavras, das quais 109 (44.8%) contém um 'e'.</p>\n",
-    "    </li>"
+    "> VENDEDOR: (Nome do Vendedor), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx);\n",
+    "\n",
+    "> COMPRADOR: (Nome do Comprador), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx).\n",
+    "\n",
+    "> As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
+    "        \n",
+    "Escreva um programa recebe o nome do vendedor, nacionalidade, estado civil e cpf; assim como todas essas mesmas informações (nome, nacionalidade, estado civil e cpf) do comprador. \n",
+    "\n",
+    "Inicialmente, o programa deve imprimir as informações recebidas em formato de lista, tanto para o vendedor quanto para o comprador. Os nomes e as nacionalidades (tanto do vendedor quanto do comprador) devem ser apresentadas em maiúsculo. \n",
+    "\n",
+    "Seu programa deve imprimir no console, o documento gerado, referente à identificação das partes contrantes."
    ]
   },
   {
@@ -37,19 +39,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digite nome do vendedor: Maria Jose\n",
-      "Digite nacionalidade do vendedor: Brasileira\n",
-      "Digite estado civil do vendedor: solteira\n",
-      "Digite CPF do vendedor: 12345\n",
-      "Digite nome do comprador: Jose Carlos\n",
-      "Digite nacionalidade do comprador: Brasileiro\n",
-      "Digite estado civil do comprador: Casado\n",
-      "Digite CPF do comprador: 123456\n",
+      "Digite nome do vendedor: Renato\n",
+      "Digite nacionalidade do vendedor: brasileiro\n",
+      "Digite estado civil do vendedor: solteiro\n",
+      "Digite CPF do vendedor: 1234\n",
+      "Digite nome do comprador: Felipe\n",
+      "Digite nacionalidade do comprador: brasileiro\n",
+      "Digite estado civil do comprador: casado\n",
+      "Digite CPF do comprador: 1235\n",
       "\n",
       "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
-      "    VENDEDOR: (MARIA JOSE), (BRASILEIRA), (solteira), C.P.F. nº (12345);\n",
+      "    VENDEDOR: (RENATO), (BRASILEIRO), (solteiro), C.P.F. nº (1234);\n",
       "\n",
-      "    COMPRADOR: (JOSE CARLOS), (BRASILEIRO), (Casado), C.P.F. nº (123456).\n",
+      "    COMPRADOR: (FELIPE), (BRASILEIRO), (casado), C.P.F. nº (1235).\n",
       "\n",
       "    As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
       "\n"
@@ -59,12 +61,13 @@
    "source": [
     "documento = '''\n",
     "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
-    "    VENDEDOR: ({}), ({}), ({}), C.P.F. nº ({});\n",
     "\n",
-    "    COMPRADOR: ({}), ({}), ({}), C.P.F. nº ({}).\n",
+    "VENDEDOR: ({}), ({}), ({}), C.P.F. nº ({});\n",
+    "COMPRADOR: ({}), ({}), ({}), C.P.F. nº ({}).\n",
     "\n",
-    "    As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
+    "As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
     "'''\n",
+    "\n",
     "nome_vendedor = input('Digite nome do vendedor: ')\n",
     "nome_vendedor = nome_vendedor.upper()\n",
     "nacionalidade_vendedor = input('Digite nacionalidade do vendedor: ')\n",
@@ -81,6 +84,13 @@
     "\n",
     "print(documento.format(nome_vendedor, nacionalidade_vendedor, estado_civil_vendedor, cpf_vendedor, nome_comprador, nacionalidade_comprador, estado_civil_comprador, cpf_comprador))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
